[package]
name = "lock_release"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

